# ctsegmentation

./: .gitignore  CMakeLists.txt  test.cpp
data/: interferenceDicom.py  loss.py  segmentation_volumes.py  testunet.py  totseg_dataloader.py
data/utilities/: convert_tot_seg201_to_nnunet.py  nnunetcommands_win.txt  segmentation_volumes.py
include/ctsegmentator/: ctsegmentator.hpp  organlist.hpp
include/dxmcctseg/: dxmcctseg.hpp
tests/: CMakeLists.txt  test.cpp  test_sanity.cpp
